--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   "license": "ISC",
   "devDependencies": {
     "electron": "^29.1.0",
-    "electron-builder": "^24.9.1"
+    "electron-builder": "^24.9.1",
+    "electron-rebuild": "^3.2.9"
   },
   "dependencies": {
+    "robotjs": "^0.6.0",
     "sharp": "^0.33.2"
   }
 }
