--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "robotjs": "^0.6.0",
-    "sharp": "^0.33.2"
+    "sharp": "^0.33.2",
+    "tesseract.js": "^6.0.1"
   }
 }
